--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.6.5
 aniso8601==9.0.1
 atomicwrites==1.4.0
 attrs==21.2.0
@@ -7,6 +8,7 @@ click==8.0.1
 colorama==0.4.4
 Flask==2.0.1
 flask-marshmallow==0.14.0
+Flask-Migrate==3.0.1
 Flask-RESTful==0.3.9
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.0
@@ -15,6 +17,7 @@ idna==3.2
 iniconfig==1.1.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
+Mako==1.1.4
 MarkupSafe==2.0.1
 marshmallow==3.12.2
 marshmallow-sqlalchemy==0.26.1
@@ -24,6 +27,8 @@ psycopg2-binary==2.9.1
 py==1.10.0
 pyparsing==2.4.7
 pytest==6.2.4
+python-dateutil==2.8.2
+python-editor==1.0.4
 pytz==2021.1
 requests==2.26.0
 six==1.16.0
