--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,8 @@ idna==3.2
 iniconfig==1.1.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
+jose==1.0.0
+python-jose==3.3.0
 Mako==1.1.4
 MarkupSafe==2.0.1
 marshmallow==3.12.2
