--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,34 @@
-alembic==1.6.5
-aniso8601==9.0.1
-atomicwrites==1.4.0
-attrs==21.2.0
-certifi==2021.5.30
-charset-normalizer==2.0.2
+alembic==1.7.3
+black==21.9b0
 click==8.0.1
-colorama==0.4.4
+dnspython==2.1.0
+ecdsa==0.17.0
 Flask==2.0.1
 flask-marshmallow==0.14.0
-Flask-Migrate==3.0.1
-Flask-RESTful==0.3.9
+Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
-greenlet==1.1.0
+greenlet==1.1.1
 gunicorn==20.1.0
-idna==3.2
-iniconfig==1.1.1
+importlib-resources==5.2.2
 itsdangerous==2.0.1
 Jinja2==3.0.1
 jose==1.0.0
-python-jose==3.3.0
-Mako==1.1.4
+Mako==1.1.5
 MarkupSafe==2.0.1
-marshmallow==3.12.2
+marshmallow==3.13.0
 marshmallow-sqlalchemy==0.26.1
-packaging==21.0
-pluggy==0.13.1
-psycopg2-binary==2.9.1
-py==1.10.0
-pyparsing==2.4.7
-pytest==6.2.4
-python-dateutil==2.8.2
-python-editor==1.0.4
-pytz==2021.1
-requests==2.26.0
+mypy-extensions==0.4.3
+pathspec==0.9.0
+platformdirs==2.4.0
+psycopg2==2.9.1
+pyasn1==0.4.8
+pymongo==3.12.0
+python-jose==3.3.0
+regex==2021.9.24
+rsa==4.7.2
 six==1.16.0
-SQLAlchemy==1.4.20
-toml==0.10.2
-urllib3==1.26.6
+SQLAlchemy==1.4.25
+tomli==1.2.1
+typing-extensions==3.10.0.2
 Werkzeug==2.0.1
+zipp==3.5.0
