--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
 
     mongodb:
         restart: always
-        image: mongo
+        image: mongo:5.0.3
         container_name: mongodb
         volumes:
             - mongo-data:/data/db
