--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ platformdirs==2.4.0
 psycopg2==2.9.1
 pyasn1==0.4.8
 pymongo==3.12.0
+python-dotenv==0.19.0
 python-jose==3.3.0
 regex==2021.9.24
 rsa==4.7.2
