--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 alembic==1.7.3
+attrs==21.2.0
 black==21.9b0
 click==8.0.1
 dnspython==2.1.0
 ecdsa==0.17.0
+flake8==4.0.1
 Flask==2.0.1
 flask-marshmallow==0.14.0
 Flask-Migrate==3.1.0
@@ -10,6 +12,7 @@ Flask-SQLAlchemy==2.5.1
 greenlet==1.1.1
 gunicorn==20.1.0
 importlib-resources==5.2.2
+iniconfig==1.1.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
 jose==1.0.0
@@ -17,18 +20,27 @@ Mako==1.1.5
 MarkupSafe==2.0.1
 marshmallow==3.13.0
 marshmallow-sqlalchemy==0.26.1
+mccabe==0.6.1
 mypy-extensions==0.4.3
+packaging==21.0
 pathspec==0.9.0
 platformdirs==2.4.0
+pluggy==1.0.0
 psycopg2==2.9.1
+py==1.10.0
 pyasn1==0.4.8
+pycodestyle==2.8.0
+pyflakes==2.4.0
 pymongo==3.12.0
+pyparsing==2.4.7
+pytest==6.2.5
 python-dotenv==0.19.0
 python-jose==3.3.0
 regex==2021.9.24
 rsa==4.7.2
 six==1.16.0
 SQLAlchemy==1.4.25
+toml==0.10.2
 tomli==1.2.1
 typing-extensions==3.10.0.2
 Werkzeug==2.0.1
