--- a/argo-flask/github-sensor.yaml
+++ b/argo-flask/github-sensor.yaml
@@ -123,7 +123,7 @@ spec:
                       - name: app_repo
                         value: ""
                       - name: container_image
-                        value: evgenija1/products-databases:v10
+                        value: evgenija1/products-databases
                       - name: container_tag
                         value: ""
                     dependencies:
