--- a/argo-flask/github-event-source.yaml
+++ b/argo-flask/github-event-source.yaml
@@ -11,7 +11,7 @@ spec:
       targetPort: 12000
   github:
     products-webhook:      # imeto na github webhook (listenerot), eventName actually (custom, kako sakame)
-      owner: stefankochev
+      owner: ekrajchevska
       repository: flask-products
       webhook:
         endpoint: /products-ms
@@ -26,3 +26,21 @@ spec:
       insecure: true
       active: true
       contentType: json
+
+    auth-webhook:      # imeto na github webhook (listenerot), eventName actually (custom, kako sakame)
+      owner: ekrajchevska
+      repository: fastapi-auth
+      webhook:
+        endpoint: /auth-ms
+        port: "12000"
+        method: POST
+        url: http://localhost
+      events:
+        - "*"
+      apiToken:
+        name: github-access
+        key: token
+      insecure: true
+      active: true
+      contentType: json
+
