--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -15,7 +15,7 @@ spec:
       hostNetwork: true
       containers:
         - name: products-databases
-          image: evgenija1/products-databases:v10
+          image: evgenija1/products-databases:74712ced343545db4adab167ae7e4361a6ffbe37
           imagePullPolicy: Always
           env:
             - name: POSTGRES_USER
