--- a/argo-flask/github-sensor.yaml
+++ b/argo-flask/github-sensor.yaml
@@ -16,7 +16,7 @@ spec:
   - name: github
     eventSourceName: github-event-source
     eventName: products-webhook
-    filters:    # bez filter -> commit loop
+    filters:    # bez filter --> commit loop
       data:   
         - path: body.commits.0.message
           type: string
