--- a/argo-flask/github-event-source.yaml
+++ b/argo-flask/github-event-source.yaml
@@ -2,7 +2,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: EventSource     # tuka definirame event source, vo slucajov github webhook (listener)
 metadata:
-  name: github-event-source 
+  name: flask-github-event-source 
   namespace: argo-events
 spec:
   service:
