--- a/argo-flask/github-sensor.yaml
+++ b/argo-flask/github-sensor.yaml
@@ -14,7 +14,7 @@ metadata:
 spec:
   dependencies:   # dependency za sensor-ot (sensorot slusa na vakvite eventi -> subscribe), tuka se def. event-sources, moze pojke
   - name: github
-    eventSourceName: github-event-source
+    eventSourceName: flask-github-event-source 
     eventName: products-webhook
     filters:    # bez filter --> commit loop
       data:   
